Add sponsor logo

--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
           <div class="marquee1">
 
   <marquee behavior="scrolling" scrolldelay="-6" scrollamount="10" width="100%" >
-    <img class="d-block w-10 marq" src="images/mm.jpg" alt="1st slide">
+    <img class="d-block w-10 marq" src="images/mm.jpeg" alt="1st slide">
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon1.jpg" alt="1st slide">
     <pre class="marq">       </pre>
@@ -472,7 +472,7 @@
     <img class="d-block w-10 marq" src="images/spon6.png" alt="6th slide">
     <pre class="marq">       </pre>
 
-    <img class="d-block w-10 marq" src="images/mm.jpg" alt="1st slide">
+    <img class="d-block w-10 marq" src="images/mm.jpeg" alt="1st slide">
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon1.jpg" alt="1st slide">
     <pre class="marq">       </pre>
@@ -484,9 +484,7 @@
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon6.png" alt="6th slide">
     <pre class="marq">       </pre>
-
-
-    <img class="d-block w-10 marq" src="images/mm.jpg" alt="1st slide">
+    <img class="d-block w-10 marq" src="images/mm.jpeg" alt="1st slide">
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon1.jpg" alt="1st slide">
     <pre class="marq">       </pre>
@@ -498,9 +496,7 @@
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon6.png" alt="6th slide">
     <pre class="marq">       </pre>
-
-
-    <img class="d-block w-10 marq" src="images/mm.jpg" alt="1st slide">
+    <img class="d-block w-10 marq" src="images/mm.jpeg" alt="1st slide">
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon1.jpg" alt="1st slide">
     <pre class="marq">       </pre>
@@ -512,8 +508,7 @@
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon6.png" alt="6th slide">
     <pre class="marq">       </pre>
-
-    <img class="d-block w-10 marq" src="images/mm.jpg" alt="1st slide">
+    <img class="d-block w-10 marq" src="images/mm.jpeg" alt="1st slide">
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon1.jpg" alt="1st slide">
     <pre class="marq">       </pre>
@@ -525,8 +520,7 @@
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon6.png" alt="6th slide">
     <pre class="marq">       </pre>
-
-    <img class="d-block w-10 marq" src="images/mm.jpg" alt="1st slide">
+    <img class="d-block w-10 marq" src="images/mm.jpeg" alt="1st slide">
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon1.jpg" alt="1st slide">
     <pre class="marq">       </pre>
@@ -538,8 +532,7 @@
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon6.png" alt="6th slide">
     <pre class="marq">       </pre>
-
-    <img class="d-block w-10 marq" src="images/mm.jpg" alt="1st slide">
+    <img class="d-block w-10 marq" src="images/mm.jpeg" alt="1st slide">
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon1.jpg" alt="1st slide">
     <pre class="marq">       </pre>
@@ -551,8 +544,7 @@
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon6.png" alt="6th slide">
     <pre class="marq">       </pre>
-
-    <img class="d-block w-10 marq" src="images/mm.jpg" alt="1st slide">
+    <img class="d-block w-10 marq" src="images/mm.jpeg" alt="1st slide">
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon1.jpg" alt="1st slide">
     <pre class="marq">       </pre>
@@ -564,8 +556,7 @@
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon6.png" alt="6th slide">
     <pre class="marq">       </pre>
-
-    <img class="d-block w-10 marq" src="images/mm.jpg" alt="1st slide">
+    <img class="d-block w-10 marq" src="images/mm.jpeg" alt="1st slide">
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon1.jpg" alt="1st slide">
     <pre class="marq">       </pre>
@@ -577,8 +568,7 @@
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon6.png" alt="6th slide">
     <pre class="marq">       </pre>
-
-    <img class="d-block w-10 marq" src="images/mm.jpg" alt="1st slide">
+    <img class="d-block w-10 marq" src="images/mm.jpeg" alt="1st slide">
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon1.jpg" alt="1st slide">
     <pre class="marq">       </pre>
@@ -590,8 +580,7 @@
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon6.png" alt="6th slide">
     <pre class="marq">       </pre>
-
-    <img class="d-block w-10 marq" src="images/mm.jpg" alt="1st slide">
+    <img class="d-block w-10 marq" src="images/mm.jpeg" alt="1st slide">
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon1.jpg" alt="1st slide">
     <pre class="marq">       </pre>
@@ -603,8 +592,7 @@
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon6.png" alt="6th slide">
     <pre class="marq">       </pre>
-
-    <img class="d-block w-10 marq" src="images/mm.jpg" alt="1st slide">
+    <img class="d-block w-10 marq" src="images/mm.jpeg" alt="1st slide">
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon1.jpg" alt="1st slide">
     <pre class="marq">       </pre>
@@ -616,8 +604,7 @@
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon6.png" alt="6th slide">
     <pre class="marq">       </pre>
-
-    <img class="d-block w-10 marq" src="images/mm.jpg" alt="1st slide">
+    <img class="d-block w-10 marq" src="images/mm.jpeg" alt="1st slide">
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon1.jpg" alt="1st slide">
     <pre class="marq">       </pre>
@@ -629,8 +616,7 @@
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon6.png" alt="6th slide">
     <pre class="marq">       </pre>
-
-    <img class="d-block w-10 marq" src="images/mm.jpg" alt="1st slide">
+    <img class="d-block w-10 marq" src="images/mm.jpeg" alt="1st slide">
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon1.jpg" alt="1st slide">
     <pre class="marq">       </pre>
@@ -642,8 +628,7 @@
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon6.png" alt="6th slide">
     <pre class="marq">       </pre>
-
-    <img class="d-block w-10 marq" src="images/mm.jpg" alt="1st slide">
+    <img class="d-block w-10 marq" src="images/mm.jpeg" alt="1st slide">
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon1.jpg" alt="1st slide">
     <pre class="marq">       </pre>
@@ -655,8 +640,7 @@
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon6.png" alt="6th slide">
     <pre class="marq">       </pre>
-
-    <img class="d-block w-10 marq" src="images/mm.jpg" alt="1st slide">
+    <img class="d-block w-10 marq" src="images/mm.jpeg" alt="1st slide">
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon1.jpg" alt="1st slide">
     <pre class="marq">       </pre>
@@ -668,8 +652,7 @@
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon6.png" alt="6th slide">
     <pre class="marq">       </pre>
-
-    <img class="d-block w-10 marq" src="images/mm.jpg" alt="1st slide">
+    <img class="d-block w-10 marq" src="images/mm.jpeg" alt="1st slide">
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon1.jpg" alt="1st slide">
     <pre class="marq">       </pre>
@@ -681,8 +664,7 @@
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon6.png" alt="6th slide">
     <pre class="marq">       </pre>
-
-    <img class="d-block w-10 marq" src="images/mm.jpg" alt="1st slide">
+    <img class="d-block w-10 marq" src="images/mm.jpeg" alt="1st slide">
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon1.jpg" alt="1st slide">
     <pre class="marq">       </pre>
@@ -694,8 +676,7 @@
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon6.png" alt="6th slide">
     <pre class="marq">       </pre>
-
-    <img class="d-block w-10 marq" src="images/mm.jpg" alt="1st slide">
+    <img class="d-block w-10 marq" src="images/mm.jpeg" alt="1st slide">
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon1.jpg" alt="1st slide">
     <pre class="marq">       </pre>
@@ -707,8 +688,7 @@
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon6.png" alt="6th slide">
     <pre class="marq">       </pre>
-
-    <img class="d-block w-10 marq" src="images/mm.jpg" alt="1st slide">
+    <img class="d-block w-10 marq" src="images/mm.jpeg" alt="1st slide">
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon1.jpg" alt="1st slide">
     <pre class="marq">       </pre>
@@ -720,8 +700,7 @@
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon6.png" alt="6th slide">
     <pre class="marq">       </pre>
-
-    <img class="d-block w-10 marq" src="images/mm.jpg" alt="1st slide">
+    <img class="d-block w-10 marq" src="images/mm.jpeg" alt="1st slide">
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon1.jpg" alt="1st slide">
     <pre class="marq">       </pre>
@@ -733,8 +712,7 @@
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon6.png" alt="6th slide">
     <pre class="marq">       </pre>
-
-    <img class="d-block w-10 marq" src="images/mm.jpg" alt="1st slide">
+    <img class="d-block w-10 marq" src="images/mm.jpeg" alt="1st slide">
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon1.jpg" alt="1st slide">
     <pre class="marq">       </pre>
@@ -746,8 +724,7 @@
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon6.png" alt="6th slide">
     <pre class="marq">       </pre>
-
-    <img class="d-block w-10 marq" src="images/mm.jpg" alt="1st slide">
+    <img class="d-block w-10 marq" src="images/mm.jpeg" alt="1st slide">
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon1.jpg" alt="1st slide">
     <pre class="marq">       </pre>
@@ -759,8 +736,7 @@
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon6.png" alt="6th slide">
     <pre class="marq">       </pre>
-
-    <img class="d-block w-10 marq" src="images/mm.jpg" alt="1st slide">
+    <img class="d-block w-10 marq" src="images/mm.jpeg" alt="1st slide">
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon1.jpg" alt="1st slide">
     <pre class="marq">       </pre>
@@ -772,76 +748,8 @@
     <pre class="marq">       </pre>
     <img class="d-block w-10 marq" src="images/spon6.png" alt="6th slide">
     <pre class="marq">       </pre>
-
-    <img class="d-block w-10 marq" src="images/mm.jpg" alt="1st slide">
-    <pre class="marq">       </pre>
-    <img class="d-block w-10 marq" src="images/spon1.jpg" alt="1st slide">
-    <pre class="marq">       </pre>
-    <img class="d-block w-10  marq" src="images/spon2.jpg" alt="2nd slide">
-    <pre class="marq">       </pre>
-    <img class="d-block w-10 marq" src="images/spon4.png" alt="4rd slide">
-    <pre class="marq">       </pre>
-    <img class="d-block w-10 marq" src="images/spon5.png" alt="5th slide">
-    <pre class="marq">       </pre>
-    <img class="d-block w-10 marq" src="images/spon6.png" alt="6th slide">
-    <pre class="marq">       </pre>
-
-    <img class="d-block w-10 marq" src="images/mm.jpg" alt="1st slide">
-    <pre class="marq">       </pre>
-    <img class="d-block w-10 marq" src="images/spon1.jpg" alt="1st slide">
-    <pre class="marq">       </pre>
-    <img class="d-block w-10  marq" src="images/spon2.jpg" alt="2nd slide">
-    <pre class="marq">       </pre>
-    <img class="d-block w-10 marq" src="images/spon4.png" alt="4rd slide">
-    <pre class="marq">       </pre>
-    <img class="d-block w-10 marq" src="images/spon5.png" alt="5th slide">
-    <pre class="marq">       </pre>
-    <img class="d-block w-10 marq" src="images/spon6.png" alt="6th slide">
-    <pre class="marq">       </pre>
-
-    <img class="d-block w-10 marq" src="images/mm.jpg" alt="1st slide">
-    <pre class="marq">       </pre>
-    <img class="d-block w-10 marq" src="images/spon1.jpg" alt="1st slide">
-    <pre class="marq">       </pre>
-    <img class="d-block w-10  marq" src="images/spon2.jpg" alt="2nd slide">
-    <pre class="marq">       </pre>
-    <img class="d-block w-10 marq" src="images/spon4.png" alt="4rd slide">
-    <pre class="marq">       </pre>
-    <img class="d-block w-10 marq" src="images/spon5.png" alt="5th slide">
-    <pre class="marq">       </pre>
-    <img class="d-block w-10 marq" src="images/spon6.png" alt="6th slide">
-    <pre class="marq">       </pre>
-
-    <img class="d-block w-10 marq" src="images/mm.jpg" alt="1st slide">
-    <pre class="marq">       </pre>
-    <img class="d-block w-10 marq" src="images/spon1.jpg" alt="1st slide">
-    <pre class="marq">       </pre>
-    <img class="d-block w-10  marq" src="images/spon2.jpg" alt="2nd slide">
-    <pre class="marq">       </pre>
-    <img class="d-block w-10 marq" src="images/spon4.png" alt="4rd slide">
-    <pre class="marq">       </pre>
-    <img class="d-block w-10 marq" src="images/spon5.png" alt="5th slide">
-    <pre class="marq">       </pre>
-    <img class="d-block w-10 marq" src="images/spon6.png" alt="6th slide">
-    <pre class="marq">       </pre>
-
-    <img class="d-block w-10 marq" src="images/mm.jpg" alt="1st slide">
-    <pre class="marq">       </pre>
-    <img class="d-block w-10 marq" src="images/spon1.jpg" alt="1st slide">
-    <pre class="marq">       </pre>
-    <img class="d-block w-10  marq" src="images/spon2.jpg" alt="2nd slide">
-    <pre class="marq">       </pre>
-    <img class="d-block w-10 marq" src="images/spon4.png" alt="4rd slide">
-    <pre class="marq">       </pre>
-    <img class="d-block w-10 marq" src="images/spon5.png" alt="5th slide">
-    <pre class="marq">       </pre>
-    <img class="d-block w-10 marq" src="images/spon6.png" alt="6th slide">
-    <pre class="marq">       </pre>
-
 
     
-
-
 
 
   </marquee>
