--- a/index.html
+++ b/index.html
@@ -419,8 +419,11 @@
   <div><img class="mySlides" src="images/speaker/vivek.png" style="width:100%" Yusra Mardini Swimmer, Olympian></div>
   <div><img class="mySlides" src="images/speaker/rahul.png" style="width:100%" Rahul Aggarwal Founder at Mission Oxygen, Co-Founder - Designhill></div>
   <div><img class="mySlides" src="images/speaker/darren.png" style="width:100%"Darren Hood Principle UX Designer ></div>
+<br>
+  <p class="heading-with-border" style="font-size: 20px;">To Know More, Head to our <a href="https://www.youtube.com/channel/UCoG8MtD-Gj9u7m4DFNsIrjg" style="color:#f23a2e;">YouTube Channel</a>  <a href="https://www.youtube.com/channel/UCoG8MtD-Gj9u7m4DFNsIrjg"><img src="images/yt.png" style="height: 50px; display: inline;"></a></p>
 </div>
 </div>
+
 </div>
 
            <div class="block-schedule overlay site-section" style="margin-top: -50px;">
