--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
               <strong><div class="prevspons">
 
                 <!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
-                Our Previous Sponsors
+                Our Sponsors
               </div></strong>
                 <!-- <strong>
                   <div class="ps2">Our Previous Sponsors</div>
