--- a/index.html
+++ b/index.html
@@ -1352,7 +1352,7 @@ var x = setInterval(function() {
   var seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
   // Output the result in an element with id="demo"
-                document.getElementById("demo").innerHTML ="0"+ days +":"+ hours + ":"
+                document.getElementById("demo").innerHTML ="0"+ days +":"+ "0"+hours + ":"
                     + minutes + ":" + seconds + "";
 
   // If the count down is over, write some text
