--- a/spk.html
+++ b/spk.html
@@ -239,7 +239,7 @@
           <div class="text">
             <h1 class="mb-3" style="margin-top: 20px;font-size: 43px;font-weight: 600;">
               Darren Hood</h1>
-            <h3><i>Principle UX Designer</i></h3>
+            <h3><i>Principal UX Designer</i></h3>
             <br>
             <p>
               Darren Hood has been involved in user experience design operations for over 20 years. He has been
