--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
        </div>
        </div>
 <!--        <div class="timer2">
-<!--          <p>Going live in</p> -->
+         <p>Going live in</p> 
        </div> -->
        <div class="timer">
          <p id="demo"></p>
