--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
 <!--        <div class="timer2">
          <p>Going live in</p>
        </div> -->
-       <div class="timer">
+<!--        <div class="timer">
          <p id="demo"></p>
-       </div>
+       </div> -->
 
      </div>
      <div class="dabbado">
