--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
          Acoustic of strength
        </div>
        <div class="wait">
-         The long wait ends, raising the curtain for the most awaited return of the 3rd edition of TEDxIITPatna.
-       </div>
+        Our 3rd edition has come to an end. Thank you for all your support and see you all in the next edition :)       
+	</div>
        </div>
 <!--        <div class="timer2">
          <p>Going live in</p>
